# libodb-mysql

./: INSTALL  Makefile.am  README  README-GIT  configure.ac  libodb-mysql-vc12.sln  libodb-mysql.pc.in  makefile  manifest  repositories.manifest  version
m4/: libmysqlclient.m4
odb/mysql/: Makefile.am  auto-handle.hxx  binding.hxx  buildfile  connection-factory.cxx  connection-factory.hxx  connection.cxx  connection.hxx  connection.ixx  container-statements.hxx  container-statements.txx  database.cxx  database.hxx  database.ixx  enum.cxx  enum.hxx  error.cxx  error.hxx  exceptions.cxx  exceptions.hxx  forward.hxx  libodb-mysql-vc10.vcxproj  libodb-mysql-vc10.vcxproj.filters  libodb-mysql-vc11.vcxproj  libodb-mysql-vc12.vcxproj  libodb-mysql-vc8.vcproj  libodb-mysql-vc9.vcproj  makefile  mysql-types.hxx  mysql.hxx  no-id-object-result.hxx  no-id-object-result.txx  no-id-object-statements.hxx  no-id-object-statements.txx  object-result.hxx  object-result.txx  object-statements.cxx  object-statements.hxx  object-statements.ixx  object-statements.txx  (+50 more)
odb/mysql/details/: config-vc.h  config.h.in  config.hxx  conversion.hxx  export.hxx  options.cli  options.cxx  options.hxx  options.ixx
odb/mysql/details/build2/: config-stub.h  config-vc-stub.h  config-vc.h  config.h
tests/basics/: buildfile  driver.cxx
